test/parsing/ferguson/comment-test.good
comment-test.chpl:10: error: EOF in comment
comment-test.chpl:6: note: Unterminated comment started here
