test/parsing/ferguson/comment-test.chpl
/* This
   comment
   ends
 */

/*
   This comment does not end


